--- a/Art/main.css
+++ b/Art/main.css
@@ -5,12 +5,12 @@ html {
 
 #painting {
     background-color: #fff4db;
-    width: 400px;
-    height: 400px;
-    margin-top: 30px;
+    width: 50vh;
+    height: 50vh;
+    margin-top: 3.75vh;
     margin-left: auto;
     margin-right: auto;
-    box-shadow: 10px 10px 0px #8d8d8d
+    box-shadow: 1.25vh 1.25vh 1.25vh #8d8d8d
 }
 
 .red {
@@ -30,12 +30,12 @@ html {
 }
 
 #toprow {
-    height: 290px;
+    height: 36.25vh;
 }
 
 #bigbox {
-    width: 290px;
-    height: 290px;
+    width: 36.25vh;
+    height: 36.25vh;
 }
 
 .right {
@@ -47,37 +47,37 @@ html {
 }
 
 #divider1 {
-    height: 290px;
-    width: 10px;
+    height: 36.25vh;
+    width: 1.25vh;
 }
 
 #divider2 {
-    height: 10px;
-    width: 100px;
+    height: 2.25vh;
+    width: 12.5vh;
 }
 
 .mediumbox {
-    height: 140px;
-    width: 100px;
+    height: 12.5vh;
+    width: 5vh;
 }
 
 #middledivider {
-    width: 400px;
-    height: 10px;
+    width: 50vh;
+    height: 1.25vh;
 }
 
 #bottomrow {
-    height: 100px;
+    height: 12.5vh;
 }
 
 #smallbox {
-    height: 100px;
-    width: 100px;
+    height: 12.5vh;
+    width: 12.5vh;
 }
 
 #divider3 {
-    height: 100px;
-    width: 10px;
+    height: 12.5vh;
+    width: 1.25vh;
 }
 
 #longbox {
@@ -86,13 +86,13 @@ html {
 }
 
 #divider4 {
-    height: 100px;
-    width: 10px;
+    height: 12.5vh;
+    width: 1.25vh;
 }
 
 #ssmallbox2 {
-    height: 45px;
-    width: 20px;
+    height: 5.5vh;
+    width: 3vh;
 }
 
 #divider5 {
@@ -101,16 +101,16 @@ html {
 }
 
 #ssmallbox {
-    height: 45px;
-    width: 20px;
+    height: 5.8vh;
+    width: 3vh;
 }
 
 #divider5 {
-    height 10px;
-    width: 20px;
+    height: 1.25vh;
+    width: 3vh;
 }
 
 #anotherbox {
-    height: 100px;
-    width: 260px;
+    height: 12.5vh;
+    width: 32vh;
 }
