--- a/Codelab/Game/main.css
+++ b/Codelab/Game/main.css
@@ -1,10 +1,3 @@
-canvas {
-    border: 6px blue solid;
-}
-
-.bullet {
-    width: 16px;
-    height: 16px;
-    background-color: red;
-    position: absolute;
+canvas{
+    border: 3px black solid;
 }
